Se crea documentacion para los pedidos
